vlib/v/checker/tests/orm_limit_less_than_zero_error.out
vlib/v/checker/tests/orm_limit_less_than_zero_error.vv:18:26: error: V ORM: `limit` must be greater than or equal to zero
   16 | 
   17 |     users := sql db {
   18 |         select from User limit user_limit
      |                                ~~~~~~~~~~
   19 |     }!
   20 |
