vlib/v/checker/tests/orm_limit_less_than_zero_error.vv
module main

import db.sqlite

const user_limit = -10

struct User {
	id       int @[primary; sql: serial]
	username string
}

fn main() {
	db := sqlite.connect(':memory:') or { panic(err) }

	users := sql db {
		select from User limit user_limit
	}!

	println(users)
}
